# vtf-thumbnailer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: build.yml
installer/kde/: desktop.in  metainfo.in  plugin.json.in
installer/linux/: mime-type.in  thumbnailer.in
src/: common.cpp  common.h.in  kde.cpp  kde.h  linux.cpp  windows.cpp  windows.def.in
